Fix playlist wrapping and some responsive elements

--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ h2 {
     font-size: 2rem;
 }
 
+h5 {
+    font-size: 1rem;
+}
+
 p {
     font-size: 0.9rem;
 }
@@ -35,30 +39,31 @@ nav {
     background-color: #009639;
     color: white;
     display: flex;
+    align-items: center;
     position: fixed;
     width: 100%;
-    padding: 1rem;
+    padding: 1rem 0;
 }
 
 nav figure img {
-    width: 50px;
+    width: 7rem;
+    padding: 0 0.5rem;
 }
 
 #path {
-    padding: 0.25rem;
     display: flex;
     width: 45%;
     justify-content: space-around;
+    padding: 0 0.5rem;
 }
 
 #media {
     display: flex;
     margin-left: auto;
-    padding: 0 1rem;
+    padding: 0 0.5rem;
 }
 
 nav img {
-    width: 15px;
     justify-content: right;
 }
 
@@ -68,7 +73,7 @@ nav ul {
 
 nav li {
     list-style: none;
-    padding: 0.75rem 0.5rem;
+    padding: 0 0.5rem;
 }
 
 #hero {
@@ -77,7 +82,7 @@ nav li {
 
 #hero img {
     width: 100%;
-    padding-top: 5rem;
+    padding-top: 4rem;
 }
 
 #manifesto {
@@ -87,7 +92,7 @@ nav li {
 }
 
 #message {
-    width: 20rem;
+    width: 35rem;
     text-align: center;
     margin: 0px auto;
 }
@@ -255,7 +260,9 @@ nav li {
     color: #3a7539;
     text-transform: none;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-content: center;
 }
 
 #audio-media img {
@@ -263,21 +270,20 @@ nav li {
 }
 
 #sprite-way {
-    width: 40%;
+    width: 22rem;
     padding: 2rem;
     text-align: center;
 }
 
+#spotify {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 #playlist {
-    width: 25%;
     padding: 1rem 0.5rem;
 }
-
-#playlist iframe {
-    height: 380px;
-}
-
-
 
 #playlist-button, #podcast-button {
     background-color: #009639;
@@ -296,7 +302,6 @@ nav li {
     align-items: center;
 }
 
-
 #playlist-button img, #podcast-button img {
     width: 20px;
     height: 20px;
@@ -305,7 +310,7 @@ nav li {
 
 
 #podcast {
-    width: 20%;
+    width: 200px;
     padding: 1rem 0.5rem;
 }
 
@@ -393,13 +398,9 @@ footer h5 {
     list-style-type: none;
 }
 
-
-#footer-social img {
-    width: 15px;
-}
-
 #footer-flavors ul, #buy-now ul {
     list-style-type: none;
+    font-size: 1rem;
 }
 
 #footer-links {
@@ -424,14 +425,10 @@ footer h5 {
 }
 
 #footer-nav {
-    font-size: 1rem;
+    font-size: 1.5rem;
     text-transform: none;
     text-align: center;
     padding: 1rem;
-}
-
-#footer-nav li {
-    font-size: 0.65rem;
 }
 
 #footer-nav ul {
@@ -441,7 +438,7 @@ footer h5 {
 }
 
 #footer-nav li {
-    font-size: 0.65rem;
+    font-size: 1rem;
     padding: 0.25rem;
     font-style: normal;
 }
@@ -450,13 +447,13 @@ footer h5 {
     html {
         font-size: 14px;
     }
+    .soc-img {
+        width: 16px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
     html {
-        font-size: 10px;
-    }
-    iframe {
-        width: 100%;
+        font-size: 7px;
     }
 }
